--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: ['main']
+    tags: ['v*.*.*']
   pull_request:
 
 jobs:
@@ -34,6 +35,7 @@ jobs:
         run: npm run build
 
       - name: Prepare extension package folder
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           rm -rf extension
           mkdir -p extension/panel-dist
@@ -56,11 +58,13 @@ jobs:
           cp -R shared extension/ || true
 
       - name: Create zip
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           cd extension
           zip -r ../react-detective.zip .
 
       - name: Upload artifact (zip)
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-artifact@v4
         with:
           name: react-detective
